--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -7,9 +7,6 @@
             transition: background-color 0.4s ease-out;
             .lc-navbar-custom {
                 background-color: transparent;
-                .navbar-toggler-icon {
-                    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0,0,0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-                }
                 .lc-hamburguer {
                     display: inline-block;
                     position: relative;
@@ -78,9 +75,6 @@
         .menuScroll {
             background-color: #000 !important;
             .lc-navbar-custom {
-                .navbar-toggler-icon {
-                    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-                }
                 .lc-hamburguer {
                     background: #fff;
                     &::before, &::after {
